bootstrap theme added

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,7 +2,12 @@
 {% block title %}This is an example page{% endblock %}
 
 {% block navbar %}
-<!-- -->
+
+<nav class="navbar navbar-inverse navbar-static-top" style="background-color: #ED2E38; border-color: #ED2E38; color: #FFFFFF">
+        <a class="navbar-brand" href="{{ url_for('search') }}" style="color: #FFFFFF; font-size: 20px">Flask Scrabble</a>
+</nav>
+
+
 {% endblock %}
 
 
