--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,10 +1,11 @@
 {% extends "bootstrap/base.html" %}
+
 {% block title %}This is an example page{% endblock %}
 
 {% block navbar %}
 
 <nav class="navbar navbar-inverse navbar-static-top" style="background-color: #ED2E38; border-color: #ED2E38; color: #FFFFFF">
-        <a class="navbar-brand" href="{{ url_for('search') }}" style="color: #FFFFFF; font-size: 20px">Flask Scrabble</a>
+        <a href="{{ url_for('search') }}" class="navbar-brand"style="color: #FFFFFF; font-size: 24px">Flask Scrabble</a>
 </nav>
 
 
