--- a/app/templates/search_results.html
+++ b/app/templates/search_results.html
@@ -4,6 +4,7 @@
 <div class="col-md-4"></div>
 <div class="col-md-4" style="font-size: 16px; text-align: center;">
     {% if results %}
+        <h3>{{ results|count}} words found</h3>
         {% for scrabble_word in results %}
             {{ scrabble_word.word }} {{ scrabble_word.points }}<br>
         {% endfor %}
