--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,8 +4,21 @@
 
 {% block navbar %}
 
-<nav class="navbar navbar-inverse navbar-static-top" style="background-color: #ED2E38; border-color: #ED2E38; color: #FFFFFF">
-        <a href="{{ url_for('search') }}" class="navbar-brand"style="color: #FFFFFF; font-size: 24px">Flask Scrabble</a>
+<nav class="navbar navbar-inverse navbar-default" style="background-color: #ED2E38; border-color: #ED2E38; color: #FFFFFF; border-radius: 0px; border: 0px">
+        <div class="container-fluid">
+                        <div class="col-md-4">
+                <a href="{{ url_for('search') }}" class="navbar-brand"style="color: #FFFFFF; font-size: 24px">Flask Scrabble</a>
+                        </div>
+        <div class="col-md-4">
+        <form class="navbar-form" id="search" role="search" style="display: block; text-align: center; border-top: 0px; border-bottom: 0px; margin: 7px 0px 0px 0px; border: 0; box-shadow: none;">
+                <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Search">
+                </div>
+                <!-- <button type="submit" class="btn btn-default">Submit</button> -->
+        </form>
+        </div>
+        <div class="col-md-4"></div>
+        </div>
 </nav>
 
 
