--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,22 +1,28 @@
 {% extends "bootstrap/base.html" %}
 
-{% block title %}This is an example page{% endblock %}
+{% block title %}Flask Scrabble{% endblock %}
 
 {% block navbar %}
 
-<nav class="navbar navbar-inverse navbar-default" style="background-color: #ED2E38; border-color: #ED2E38; color: #FFFFFF; border-radius: 0px; border: 0px">
+<nav class="navbar navbar-default" style="background-color: #ED2E38; border-color: #ED2E38; color: #FFFFFF; border-radius: 0px; border: 0px">
         <div class="container-fluid">
+                <div class="row">
                         <div class="col-md-4">
-                <a href="{{ url_for('search') }}" class="navbar-brand"style="color: #FFFFFF; font-size: 24px">Flask Scrabble</a>
+                                <a href="{{ url_for('search') }}" class="navbar-brand"style="color: #FFFFFF; font-size: 24px">Flask Scrabble</a>
                         </div>
-        <div class="col-md-4">
-        <form class="navbar-form" id="search" role="search" style="display: block; text-align: center; border-top: 0px; border-bottom: 0px; margin: 7px 0px 0px 0px; border: 0; box-shadow: none;">
-                <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search">
+
+                        <div class="col-md-4">
+                                <form class="navbar-form" id="search" role="search" style="display: block; text-align: center; border-top: 0px; border-bottom: 0px; margin: 8px 0px 0px 0px; border: 0; box-shadow: none;">
+                                <div class="input-group input-group-md">
+                                        <input type="text" class="form-control" placeholder="Your Letters" size="50" style="text-align: center; font-size: 16px; width: 100%;">   
+                                        <span class="input-group-btn">
+                                                <button class="btn btn-default glyphicon glyphicon-search" type="button" style="background-color: #ff9999; color: #FFFFFF; font-size: 16px; padding: 5px 12px 5px 12px; margin: -2px 0px 0px 0px"></button>
+                                        </span>
+                                </div>
+                                <!-- Next Steps #1 Remove blue button outline #2 flex under title when collapsed #3 image on start and fail to find words-->
+                                </form>
+                        </div>
                 </div>
-                <!-- <button type="submit" class="btn btn-default">Submit</button> -->
-        </form>
-        </div>
         <div class="col-md-4"></div>
         </div>
 </nav>
