next steps notes

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,9 +14,9 @@
                         <div class="col-md-4">
                                 <form class="navbar-form" id="search" role="search" style="display: block; text-align: center; border-top: 0px; border-bottom: 0px; margin: 8px 0px 0px 0px; border: 0; box-shadow: none;">
                                 <div class="input-group input-group-md">
-                                        <input type="text" class="form-control" placeholder="Your Letters" size="50" style="text-align: center; font-size: 16px; width: 100%;">   
+                                        <input type="text" class="form-control" placeholder="Your Letters" size="50" style="text-align: center; font-size: 16px; width: 100%; border-color: #FFFFFF;">   
                                         <span class="input-group-btn">
-                                                <button class="btn btn-default glyphicon glyphicon-search" type="button" style="background-color: #ff9999; color: #FFFFFF; font-size: 16px; padding: 5px 12px 5px 12px; margin: -2px 0px 0px 0px"></button>
+                                                <button class="btn btn-default glyphicon glyphicon-search" type="button" style="background-color: #ff9999; border-color: #ff9999; color: #FFFFFF; font-size: 16px; padding: 5px 12px 5px 12px; margin: -2px 0px 0px 0px"></button>
                                         </span>
                                 </div>
                                 <!-- Next Steps #1 Remove blue button outline #2 flex under title when collapsed #3 image on start and fail to find words-->
