--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,9 +1,11 @@
-{% extends "base.html" %}
+<html>
 
-{% block content %}
-<div class="col-md-4"></div>
-<div class="col-md-4">
-    <h1>404: Page Not Found</h1>
-</div>
-<div class="col-md-4"></div>
-{% endblock %}
+<head>
+    <title>404: Page Not Found</title>
+</head>
+
+<body>
+        <h3>404: Page Not Found</h3>
+</body>
+
+</html>
