--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -1,9 +1,11 @@
-{% extends "base.html" %}
+<html>
 
-{% block content %}
-<div class="col-md-4"></div>
-<div class="col-md-4">
-    500: Internal Server Error
-</div>
-<div class="col-md-4"></div>
-{% endblock %}
+<head>
+    <title>500: Internal Server Error</title>
+</head>
+
+<body>
+    <h3>500: Page Not Found</h3>
+</body>
+
+</html>
