--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,34 +1,69 @@
-{% extends "bootstrap/base.html" %}
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-{% block title %}Flask Scrabble{% endblock %}
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static',filename='css/base.css') }}">
 
-{% block navbar %}
+    <title>Flask Scrabble</title>
+  </head>
+  <body>
 
-<nav class="navbar navbar-default" style="background-color: #ED2E38; border-color: #ED2E38; color: #FFFFFF; border-radius: 0px; border: 0px">
-        <div class="container-fluid">
-                <div class="row">
-                        <div class="col-md-4">
-                                <a href="{{ url_for('search') }}" class="navbar-brand"style="color: #FFFFFF; font-size: 24px">Flask Scrabble</a>
-                        </div>
+    <!-- Navbar -->
 
-                        <div class="col-md-4">
-                                <form class="navbar-form" id="search" role="search" style="display: block; text-align: center; border-top: 0px; border-bottom: 0px; margin: 8px 0px 0px 0px; border: 0; box-shadow: none;">
-                                <div class="input-group input-group-md">
-                                        <input type="text" class="form-control" placeholder="Your Letters" size="50" style="text-align: center; font-size: 16px; width: 100%; border-color: #FFFFFF;">   
-                                        <span class="input-group-btn">
-                                                <button class="btn btn-default glyphicon glyphicon-search" type="button" style="background-color: #ff9999; border-color: #ff9999; color: #FFFFFF; font-size: 16px; padding: 5px 12px 5px 12px; margin: -2px 0px 0px 0px"></button>
-                                        </span>
+    <nav class="navbar navbar-expand-sm navbar-dark">
+        <div class="container">
+            <ul class="nav navbar-nav flex-fill w-100 flex-nowrap">
+                <li class="nav-item">
+                    <a class="navbar-brand" href="#">Flask Scrabble</a>
+                </li>
+            </ul>
+            <ul class="nav navbar-nav flex-fill justify-content-center">
+                <li class="nav-item">
+                        <form action="" class="form-inline" method="post">
+                            {{ form.hidden_tag() }}
+                            <div class="input-group">
+                                {{ form.letters }}
+                                <div class="input-group-append">
+                                        {{ form.submit() }}
                                 </div>
-                                <!-- Next Steps #1 Remove blue button outline #2 flex under title when collapsed #3 image on start and fail to find words-->
-                                </form>
-                        </div>
-                </div>
-        <div class="col-md-4"></div>
+                            </div>
+                        </form>
+                    </li>
+            </ul>
+            <ul class="nav navbar-nav flex-fill w-100 justify-content-end">
+                <li class="nav-item">
+                    
+                </li>
+            </ul>
         </div>
-</nav>
+    </nav>
+
+    <div class="wrapper">
+
+        <!-- Content -->
+        <div class="container-fluid">
+            <div class="row mt-4">
+                <div class="col text-center">
+                    {% block content %}{% endblock %}
+                </div>
+            </div>
+        </div>
+
+    </div>
 
 
-{% endblock %}
-
-
-{% block content %}{% endblock %}
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  
+    <!-- Font Awesome JS for Glyphicons -->
+    <script src="https://kit.fontawesome.com/a1f4c44b27.js"></script>
+</body>
+</html>
